--- a/src/pages/contact-us/Contact-Us.css
+++ b/src/pages/contact-us/Contact-Us.css
@@ -63,6 +63,10 @@
         border-bottom: 1px solid var(--Light-Gray);
     }
 
+    .faq__item:first-child {
+        border-top: 1px solid var(--Light-Gray);
+    }
+
     .faq__title {
         text-transform: uppercase;
         text-align: center;
@@ -70,7 +74,6 @@
         margin: 0 2rem;
         padding: 0 0 1rem;
         color: var(--Rich-Burgundy);
-        border-bottom: 1px solid var(--Light-Gray);
     }
 
     .faq__button {
@@ -178,5 +181,50 @@ input:focus {
         .contact__header--image {
             height: 70vh;
         }
+
+        .carousel__container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            padding: 1.5rem 14vw;
+            gap: 4rem;
+
+            .carousel {
+                &::scroll-marker-group {
+                    left: 30%;
+                }
+
+                &::scroll-button(left) {
+                    right: -2.9rem;
+                }
+            } 
+        }
+
+        .carousel,
+        .carousel__info {
+            flex: 1;
+        }
+
+        .carousel__info.carousel__info {
+            display: flex;
+            align-items: flex-start;
+            text-align: left;
+
+            .carousel__text {
+                width: 60%;
+            }
+        }
+    }
+
+    .faq__container,
+    .faq__title {
+        width: 43vw;
+        margin: 0 auto;
+    }
+
+    .faq__title.faq__title {
+        font-size: 2.5rem;
+        margin: 0 auto 2rem;
     }
 }
