--- a/src/pages/contact-us/Contact-Us.css
+++ b/src/pages/contact-us/Contact-Us.css
@@ -227,4 +227,9 @@ input:focus {
         font-size: 2.5rem;
         margin: 0 auto 2rem;
     }
+
+    .form__container {
+        width: 50vw;
+        margin: 6rem auto;
+    }
 }
