increased header bg height for desktop

--- a/src/pages/community-impact/Community-impact.css
+++ b/src/pages/community-impact/Community-impact.css
@@ -55,6 +55,11 @@
         }
     }
 
+    .community__header--bg  {
+        height: 70vh;
+        
+    }
+
     .community__content {
 
         padding: 0 14vw;
