swapped from a to button

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -81,36 +81,41 @@
 }
 
 /* Hover and Active States */
-.footer__content .footer__links--container .footer__main .col__01 a:hover,
-.footer__content .footer__links--container .footer__main .col__02 a:hover,
-.footer__content .footer__links--container .footer__secondary a:hover,
-.footer__content .footer__links--container .footer__legal a:hover {
+.footer__content .footer__links--container .footer__main .col__01 button:hover,
+.footer__content .footer__links--container .footer__main .col__02 button:hover,
+.footer__content .footer__links--container .footer__secondary button:hover,
+.footer__content .footer__links--container .footer__legal button:hover {
     text-decoration: underline;
     color: var(--Hover-Gold);
 }
 
 
-.footer__content .footer__links--container .socials__icons a {
+.footer__content .footer__links--container .socials__icons button {
     display: inline-block;
     transition: transform 0.2s ease-in-out; 
 }
 
-.footer__content .footer__links--container .socials__icons a:hover {
+.footer__content .footer__links--container .socials__icons button:hover {
     transform: scale(1.1);
 }
 
-.footer__content .footer__links--container .socials__icons a:hover svg {
+.footer__content .footer__links--container .socials__icons button:hover svg {
     fill: var(--Hover-Gold); /* Or stroke, depending on your SVG */
     stroke: var(--Hover-Gold);
     transition: fill 0.2s ease;
 }
 
-.socials__icons a:hover svg#Layer_1 .cls-1 {
+.socials__icons button:hover svg#Layer_1 .cls-1 {
     stroke: var(--Hover-Gold) !important;
 }
 
-.footer__content .footer__links--container .socials__icons a:active {
+.footer__content .footer__links--container .socials__icons button:active {
     transform: scale(0.9);
+}
+
+li button {
+    color: var(--Cream-Ivory);
+    font-family: var(--Text-Font);
 }
 
 @media only screen and (min-width: 992px) {
