added max width constain on both pages and centered them for ultra wide screens

--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -1,3 +1,8 @@
+.home__page {
+  max-width: 100rem;
+  margin: 0 auto;
+}
+
 .home__page--carousel {
     display: grid;
     grid-auto-flow: column;
