--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -1,8 +1,3 @@
-.home__page {
-  max-width: 100rem;
-  margin: 0 auto;
-}
-
 .home__page--carousel {
     display: grid;
     grid-auto-flow: column;
@@ -11,6 +6,7 @@
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     position: relative;
+
 
   @media only screen and (max-width: 787px) {
     height: 54vh;
@@ -86,12 +82,16 @@
   margin-top: 0.25rem;
 
   background-color: var(--Gold-Brass);
+  max-height: 11.688rem;
 
   .reservation__content {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+
+    max-width: 100rem;
+    margin: 0 auto;
   }
 
   .reservation__text {
@@ -181,6 +181,9 @@
     align-items: center;
     text-align: center;
 
+    max-width: 100rem;
+    margin: 0 auto;
+
     .learn__more--title {
       text-transform: uppercase;
       margin-top: 1rem;
@@ -235,8 +238,16 @@
 
 @media only screen and (min-width: 768px) {
   .home__page--carousel {
-    height: 65vh;
+    height: 65vh; 
     overflow: hidden;
+
+    .homePage__carousel--image img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+      aspect-ratio: 16 / 5;
+    }
   }
 
   .reservation {
@@ -296,7 +307,7 @@
       justify-content: center;
       text-align: start;
       align-items: center;
-      gap: 8vw;
+      gap: 4rem;
 
       .learn__more--image {
         width: 70%;  
@@ -317,7 +328,8 @@
 
     .instagram__images--carousel {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(19vw, 1fr));
+      grid-template-columns: repeat(3, 1fr);
+      margin: 0 8vw;
       overflow-x: unset;
       scroll-behavior: unset;
     }
