--- a/src/pages/about/About-us.css
+++ b/src/pages/about/About-us.css
@@ -28,6 +28,7 @@
 .timeline__title {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
     margin: 3rem 1rem 2rem;
 }
